--- a/install.yml
+++ b/install.yml
@@ -2,6 +2,8 @@
 - name: install
   hosts: all
   become: yes
+  become_method: sudo
+  become_user: root
   tasks:
 
     - name: Install required collections
