--- a/install.yml
+++ b/install.yml
@@ -4,5 +4,6 @@
   tasks:
 
     - name: Install required collections
-      ansible.builtin.command:
-        cmd: ansible-galaxy collection install -r requirements.yml
+      ansible.builtin.ansible_galaxy:
+        command: collection
+        name: community.postgresql
