--- a/postgre-Master.yml
+++ b/postgre-Master.yml
@@ -31,13 +31,15 @@
         group: postgres
         mode: '0700'
 
-    - name: Base backup from master
+    - name: Base backup from master (only if data directory is empty)
       become_user: postgres
       command: >
         pg_basebackup -h {{ master_ip }} -U {{ replication_user }}
         -D /var/lib/postgresql/16/main -Fp -Xs -P -R
       environment:
         PGPASSWORD: "{{ replication_password }}"
+      when: not lookup('file', '/var/lib/postgresql/16/main/PG_VERSION', errors='ignore')
+
 
     - name: Start PostgreSQL on slave
       service:
