--- a/postgre-Master.yml
+++ b/postgre-Master.yml
@@ -31,10 +31,11 @@
         group: postgres
         mode: '0700'
 
-    - name: Check if data directory exists on slave
-      stat:
-        path: /var/lib/postgresql/16/main/PG_VERSION
-      register: pgdata
+    - name: Check if data directory is empty
+      find:
+        paths: /var/lib/postgresql/16/main
+        file_type: any
+      register: pgdata_files
 
     - name: Base backup from master (only if data directory is empty)
       become_user: postgres
@@ -43,7 +44,8 @@
         -D /var/lib/postgresql/16/main -Fp -Xs -P -R
       environment:
         PGPASSWORD: "{{ replication_password }}"
-      when: not pgdata.stat.exists
+      when: pgdata_files.matched == 0
+
 
 
 
