--- a/postgre-Master.yml
+++ b/postgre-Master.yml
@@ -31,23 +31,13 @@
         group: postgres
         mode: '0700'
 
-    - name: Check if data directory is empty
-      find:
-        paths: /var/lib/postgresql/16/main
-        file_type: any
-      register: pgdata_files
-
-    - name: Base backup from master (only if data directory is empty)
+    - name: Base backup from master
       become_user: postgres
       command: >
         pg_basebackup -h {{ master_ip }} -U {{ replication_user }}
         -D /var/lib/postgresql/16/main -Fp -Xs -P -R
       environment:
         PGPASSWORD: "{{ replication_password }}"
-      when: pgdata_files.matched == 0
-
-
-
 
     - name: Start PostgreSQL on slave
       service:
