--- a/postgre-Master.yml
+++ b/postgre-Master.yml
@@ -1,21 +1,35 @@
 ---
 - name: Setup PostgreSQL Master
   hosts: master
-
+  become: yes
+  vars:
+    replication_user: replicator
+    replication_password: "passwordku"
+    postgres_user: postgres
+    postgres_password: "prodpassword"
+    slave_ip: 192.168.0.132   # Ganti sesuai IP slave
+    client_network: 192.168.0.0/24  # jaringan client
   tasks:
-    - name: Install PostgreSQL 16
+    - name: Install PostgreSQL 16 and psycopg2
       apt:
         name:
-        - postgresql-16
-        - python3-psycopg2
+          - postgresql-16
+          - python3-psycopg2
         state: present
+
+    - name: Set password for default postgres user
+      become_user: postgres
+      postgresql_user:
+        name: "{{ postgres_user }}"
+        password: "{{ postgres_password }}"
+        role_attr_flags: "SUPERUSER,CREATEDB,CREATEROLE,LOGIN"
 
     - name: Configure postgresql.conf for replication
       lineinfile:
         path: /etc/postgresql/16/main/postgresql.conf
         regexp: "{{ item.regexp }}"
         line: "{{ item.line }}"
-      with_items:
+      loop:
         - { regexp: '^#?wal_level', line: 'wal_level = replica' }
         - { regexp: '^#?archive_mode', line: 'archive_mode = on' }
         - { regexp: '^#?archive_command', line: "archive_command = 'cp %p /var/lib/postgresql/wal_archive/%f'" }
@@ -25,21 +39,22 @@
         - { regexp: '^#?listen_addresses', line: "listen_addresses = '*'" }
       notify: Restart PostgreSQL Master
 
-
-    - name: Allow replication user in pg_hba.conf
-      lineinfile:
+    - name: Configure pg_hba.conf for replication and clients
+      blockinfile:
         path: /etc/postgresql/16/main/pg_hba.conf
-        line: "host replication replicator 192.168.0.0/24 md5"
+        block: |
+          # Allow replication from slave
+          host replication {{ replication_user }} {{ slave_ip }}/32 md5
+          # Allow all clients from network to connect as postgres
+          host all {{ postgres_user }} {{ client_network }}/24 md5
       notify: Restart PostgreSQL Master
 
     - name: Create replication user
       become_user: postgres
       postgresql_user:
-        name: replicator
-        password: "passwordku"
+        name: "{{ replication_user }}"
+        password: "{{ replication_password }}"
         role_attr_flags: "REPLICATION,LOGIN"
-
-
 
   handlers:
     - name: Restart PostgreSQL Master
