--- a/postgre-Master.yml
+++ b/postgre-Master.yml
@@ -23,6 +23,7 @@
         name: "{{ postgres_user }}"
         password: "{{ postgres_password }}"
         role_attr_flags: "SUPERUSER,CREATEDB,CREATEROLE,LOGIN"
+        login_unix_socket: /var/run/postgresql
 
     - name: Configure postgresql.conf for replication
       lineinfile:
