--- a/postgre-Master.yml
+++ b/postgre-Master.yml
@@ -42,26 +42,26 @@
           host all {{ postgres_user }} {{ client_network }} md5
       notify: Restart PostgreSQL Master
 
-    # - name: Wait for PostgreSQL socket to be ready
-    #   wait_for:
-    #     path: /var/run/postgresql/.s.PGSQL.5432
-    #     state: present
-    #     timeout: 30
+    - name: Wait for PostgreSQL socket to be ready
+      wait_for:
+        path: /var/run/postgresql/.s.PGSQL.5432
+        state: present
+        timeout: 30
 
-    # - name: Set password for default postgres user
-    #   become_user: postgres
-    #   community.postgresql.postgresql_user:
-    #     name: "{{ postgres_user }}"
-    #     password: "{{ postgres_password }}"
-    #     role_attr_flags: "SUPERUSER,CREATEDB,CREATEROLE,LOGIN"
-    #     login_unix_socket: /var/run/postgresql
+    - name: Set password for default postgres user
+      become_user: postgres
+      community.postgresql.postgresql_user:
+        name: "{{ postgres_user }}"
+        password: "{{ postgres_password }}"
+        role_attr_flags: "SUPERUSER,CREATEDB,CREATEROLE,LOGIN"
+        login_unix_socket: /var/run/postgresql
 
-    # - name: Create replication user
-    #   become_user: postgres
-    #   postgresql_user:
-    #     name: "{{ replication_user }}"
-    #     password: "{{ replication_password }}"
-    #     role_attr_flags: "REPLICATION,LOGIN"
+    - name: Create replication user
+      become_user: postgres
+      postgresql_user:
+        name: "{{ replication_user }}"
+        password: "{{ replication_password }}"
+        role_attr_flags: "REPLICATION,LOGIN"
       
 
   handlers:
