--- a/postgre-Master.yml
+++ b/postgre-Master.yml
@@ -37,7 +37,7 @@
         path: /etc/postgresql/16/main/pg_hba.conf
         block: |
           # Allow replication from slave
-          host all replication {{ replication_user }} {{ slave_ip }} md5
+          host  replication {{ replication_user }} {{ slave_ip }} md5
           # Allow all clients from network to connect as postgres
           host all {{ postgres_user }} {{ client_network }} md5
       notify: Restart PostgreSQL Master
