--- a/postgre-Slave.yml
+++ b/postgre-Slave.yml
@@ -33,7 +33,7 @@
 
     - name: Check if data directory exists on slave
       stat:
-        path: /var/lib/postgresql/16/main/PG_VERSION
+        path: /var/lib/postgresql/16/main/standby.signal
       register: pgdata
 
     - name: Base backup from master (only if data directory is empty)
@@ -43,7 +43,7 @@
         -D /var/lib/postgresql/16/main -Fp -Xs -P -R
       environment:
         PGPASSWORD: "{{ replication_password }}"
-      # when: not pgdata.stat.exists
+      when: not pgdata.stat.exists
 
     - name: Configure postgresql.conf to listen on all IPs
       lineinfile:
