--- a/postgre-Slave.yml
+++ b/postgre-Slave.yml
@@ -29,19 +29,9 @@
       register: pgdata
 
     - name: Remove data directory if backup not exists
-      file:
-        path: /var/lib/postgresql/16/main
-        state: absent
+      command: rm -rf /var/lib/postgresql/16/main/*
       when: not pgdata.stat.exists
 
-    - name: Recreate empty data directory
-      file:
-        path: /var/lib/postgresql/16/main
-        state: directory
-        owner: postgres
-        group: postgres
-        mode: '0700'
-      when: not pgdata.stat.exists
 
     - name: Base backup from master (only if data directory is empty)
       become_user: postgres
@@ -87,13 +77,6 @@
       service:
         name: postgresql
         state: started
-
-    - name: Create client user same as master
-      become_user: postgres
-      postgresql_user:
-        name: "{{ postgres_user }}"
-        password: "{{ postgres_password }}"
-        role_attr_flags: "SUPERUSER,CREATEDB,CREATEROLE,LOGIN"
 
   handlers:
     - name: Restart PostgreSQL
