--- a/postgre-Slave.yml
+++ b/postgre-Slave.yml
@@ -28,10 +28,20 @@
         path: /var/lib/postgresql/16/main/standby.signal
       register: pgdata
 
-    - name: Remove data directory if backup not exists
-      command: rm -rf /var/lib/postgresql/16/main/*
+    - name: Remove old PostgreSQL data directory if not replica
+      file:
+        path: /var/lib/postgresql/16/main
+        state: absent
       when: not pgdata.stat.exists
 
+    - name: Recreate empty data directory
+      file:
+        path: /var/lib/postgresql/16/main
+        state: directory
+        owner: postgres
+        group: postgres
+        mode: '0700'
+      when: not pgdata.stat.exists
 
     - name: Base backup from master (only if data directory is empty)
       become_user: postgres
