--- a/pgbouncer.yml
+++ b/pgbouncer.yml
@@ -51,7 +51,7 @@
         dest: /etc/pgbouncer/userlist.txt
         content: |
           {% for u in pgbouncer_users %}
-          "{{ u.name }}" "md5{{ (u.password + u.name) | to_bytes | hash('md5') }}"
+          "{{ u.name }}" "u.password"
           {% endfor %}
       notify: restart package
 
