--- a/postgre-Slave.yml
+++ b/postgre-Slave.yml
@@ -9,6 +9,22 @@
     postgres_password: "prodpassword"
     client_ips:
       - 0.0.0.0/0   # contoh laptop/public IP
+
+    pgbouncer_listen_port: 6432
+    pgbouncer_listen_addr: "0.0.0.0"
+
+    pgbouncer_auth_type: "md5"
+    pgbouncer_pool_mode: "session"
+    pgbouncer_default_pool_size: 20
+
+    pgbouncer_users:
+      - { name: "postgres", password: "prodpassword" }
+      - { name: "app_user", password: "abc123" }
+
+    pgbouncer_databases:
+      - { name: "postgres", host: "127.0.0.1", port: 5432 }
+      - { name: "appdb", host: "127.0.0.1", port: 5432 }
+
   tasks:
 
     - name: Install PostgreSQL 16 and psycopg2
@@ -16,6 +32,8 @@
         name:
           - postgresql-16
           - python3-psycopg2
+          - pgbouncer
+          - python3-passlib
         state: present
 
     - name: Stop PostgreSQL on slave
@@ -71,23 +89,59 @@
           host replication {{ replication_user }} {{ ansible_host }}/32 md5
       notify: Restart PostgreSQL
 
-    - name: Configure pg_hba.conf for client access
-      blockinfile:
-        path: /etc/postgresql/16/main/pg_hba.conf
-        block: |
-          # Allow client access
-          {% for ip in client_ips %}
-          host all {{ postgres_user }} {{ ip }} md5
-          {% endfor %}
-      notify: Restart PostgreSQL
+    # - name: Configure pg_hba.conf for client access
+    #   blockinfile:
+    #     path: /etc/postgresql/16/main/pg_hba.conf
+    #     block: |
+    #       # Allow client access
+    #       {% for ip in client_ips %}
+    #       host all {{ postgres_user }} {{ ip }} md5
+    #       {% endfor %}
+    #   notify: Restart PostgreSQL
 
     - name: Start PostgreSQL on slave
       service:
         name: postgresql
         state: started
 
+    - name: Generate pgbouncer.ini
+      copy:
+        dest: /etc/pgbouncer/pgbouncer.ini
+        content: |
+          [databases]
+          {% for db in pgbouncer_databases %}
+          {{ db.name }} = host={{ db.host }} port={{ db.port }} auth_user=postgres
+          {% endfor %}
+
+          [pgbouncer]
+          listen_addr = {{ pgbouncer_listen_addr }}
+          listen_port = {{ pgbouncer_listen_port }}
+          auth_type = {{ pgbouncer_auth_type }}
+          auth_file = /etc/pgbouncer/userlist.txt
+          pool_mode = {{ pgbouncer_pool_mode }}
+          max_client_conn = 100
+          default_pool_size = {{ pgbouncer_default_pool_size }}
+          log_connections = 1
+          log_disconnections = 1
+      notify: restart package
+
+    - name: Generate userlist.txt
+      copy:
+        dest: /etc/pgbouncer/userlist.txt
+        content: |
+          {% for u in pgbouncer_users %}
+          "{{ u.name }}" "{{ u.password }}"
+          {% endfor %}
+      notify: restart package
+
+
   handlers:
     - name: Restart PostgreSQL
       service:
         name: postgresql
+        state: restarted
+
+    - name: restart package
+      service:
+        name: pgbouncer
         state: restarted
