--- a/postgre-Master.yml
+++ b/postgre-Master.yml
@@ -28,6 +28,15 @@
 
 
   tasks:
+
+    - name: Ensure postgres user exists
+      ansible.builtin.user:
+        name: postgres
+        shell: /bin/false
+        home: /var/lib/postgresql
+        system: yes
+        create_home: yes
+
     - name: Install PostgreSQL 16 and psycopg2
       apt:
         name:
