--- a/postgre-Slave.yml
+++ b/postgre-Slave.yml
@@ -41,7 +41,7 @@
           - python3-psycopg2
           - pgbouncer
           - python3-passlib
-          - postgresql-client-16
+          - postgresql-client
         state: present
         update_cache: yes
 
